--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>  
    <!-- <div class="parent">
@@ -24,6 +24,6 @@
 <!-- <img src="/assets/images/m1.jpg" alt=""> -->
  </div>
 
-<script src="/assets/js/12.02.2025.js"></script>
+<script src="assets/js/12.02.2025.js"></script>
 </body>
 </html>
